Remove dependency on bash

--- a/action.yml
+++ b/action.yml
@@ -15,9 +15,8 @@ runs:
     - name: Re-enable workflow
       env:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
-      shell: bash
       run: |
-        [[ "${GITHUB_WORKFLOW_REF:?}" == "${GITHUB_REPOSITORY:?}"/.github/workflows/*.y?(a)ml@* ]]
+        expr "${GITHUB_WORKFLOW_REF:?}" : "${GITHUB_REPOSITORY:?}\/\.github\/workflows\/.*\.ya\?ml\@.*" > /dev/null
         workflow="${GITHUB_WORKFLOW_REF%%@*}"
         workflow="${workflow#${GITHUB_REPOSITORY}/.github/workflows/}"
         gh api -X PUT "repos/${GITHUB_REPOSITORY}/actions/workflows/${workflow}/enable"
