Remove dependency on `expr`

--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,10 @@ runs:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
       shell: sh
       run: |
-        expr "${GITHUB_WORKFLOW_REF:?}" : "${GITHUB_REPOSITORY:?}\/\.github\/workflows\/.*\.ya\?ml\@.*" > /dev/null
+        case "${GITHUB_WORKFLOW_REF:?}" in
+          "${GITHUB_REPOSITORY:?}"/.github/workflows/*.y*ml@*) ;;
+          *) false ;;
+        esac
         workflow="${GITHUB_WORKFLOW_REF%%@*}"
         workflow="${workflow#${GITHUB_REPOSITORY}/.github/workflows/}"
         gh api -X PUT "repos/${GITHUB_REPOSITORY}/actions/workflows/${workflow}/enable"
